# Raytracing-Spherical

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README.zh-CN.md  REPO_OVERVIEW.md  pyproject.toml  raytracing_spherical_review_roadmap.md
.github/workflows/: test.yml
docs/: api-compatibility.md  artifacts.md  numerical-validation.md  physics-conventions.md
docs/adr/: 0001-upstream-computation-core-api-contract.md  0002-tabulated-metric-hamiltonian-policy.md  0003-defer-internal-batch-tracing.md
docs/plans/: implementation-prompts.md  数值度规接入计划.md  (+3 more)
notebooks/: rnds_image_pipeline_walkthrough.ipynb
outputs/: README.md  lqg_fig3_ring_edges.csv
scripts/: benchmark_numerical_metric_perf.py  generate_fig5_profiles.py  generate_junction_atlas.py  generate_lqg_fig3_profiles.py  generate_numerical_metric_images.py  generate_rn_junction_images.py  generate_static_junction_fig3_fig4.py  generate_static_junction_profiles.py  generate_static_junction_validation.py  generate_validation_tables.py  write_junction_atlas_report.py
tests/: test_backend_comparator.py  test_benchmark_script_smoke.py  test_diagnostics.py  test_fig5_profile_script.py  test_hamiltonian_solver.py  test_imaging.py  test_junction_analysis.py  test_junction_atlas_scripts.py  test_lqg_fig3_profile_script.py  test_metrics.py  test_numerical_metric_validation.py  test_numerical_metrics.py  test_observers.py  test_ode_solver.py  test_package.py  test_policies.py  test_quad_solver.py  test_solvers_bounded_domain.py  test_sources.py  test_static_junction_backend_agreement.py  test_static_junction_degenerate.py  test_static_junction_hamiltonian_solver.py  test_static_junction_imaging.py  test_static_junction_scripts.py  test_static_junction_sources.py  test_static_junction_transfer_solver.py  test_static_junctions.py  test_symbolic_equation_oracles.py  test_symbolic_geodesic_oracle.py  test_transfer.py  test_validation_script.py
(+193 files in other folders)
