[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spherical-raytracing"
version = "0.1.0"
description = "Static spherical spacetime ray tracing core"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-m", "not slow"]
markers = [
  "slow: slower validation scaffolds that are excluded from default quick checks",
]
